--- a/form-task.css
+++ b/form-task.css
@@ -1,5 +1,5 @@
 @font-face {
-    src: url('/fonts/ir_sans.ttf');
+    src: url('fonts/ir_sans.ttf');
     font-family: 'iransans';
     font-weight: normal;
     font-style: normal;
